# Ad_Content_Creation_Service_Team3

./: .dockerignore  .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  Dockerfile  IMPORTANT_NOTES.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
configs/: experiment_t2i_01.yaml  frontend_config.yaml  image_editing_config.yaml  model_config.yaml  test_flux_gcp.yaml  train_flux_lora.yaml
configs/docs/: FLUX_FP8_LORA_GUIDE.md  GCP_FLUX_8BIT_SETUP.md  GCP_VM_SETUP.md  GCP_VM_WEB_GUIDE.md  MEMORY_OPTIMIZATION_GUIDE.md  frontend_guide.md  priority_guide.md
configs/inputs/: Readme.txt
configs/outputs/: Readme.txt
docs/: COMFYUI_INTEGRATION.md  GCP_VM_SETUP.md  HANDREFINER_SETUP.md  IMAGE_EDITING_GUIDE.md  IMAGE_EDITING_SYSTEM.md  LOCAL_MODEL_SETUP.md  MODEL_SETUP_GUIDE.md  MONITORING_GUIDE.md  PROGRESS_TRACKING.md  PROMPT_OPTIMIZATION.md  comfyui_integration.md  env_example.md  env_setup_guide.md  임시.md
gitTest/: GJY_test.py  jgs_test.py  test.py  test_bjs.py
outputs/flux_gcp/20251122_082524/: exp01_basic_test_metadata.yaml  test_results.yaml
recording/: 2025-12-02_flux_fill_qwen_integration.md  2025-12-02_i2i_workflow_fix.md  2025-12-02_import_fix_and_rembg.md  2025-12-02_model_usage_analysis_and_cleanup.md  2025-12-02_text_overlay_integration.md  2025-12-03_comfyui_timeout_analysis.md  2025-12-03_project_rebranding_and_qwen_fix.md  2025-12-03_text_overlay_integration.md  BUG_FIX_I2I_ANALYSIS.md  CHANGES_SUMMARY_2025-12-03.md  PHASE_1_2_IMPLEMENTATION.md  project_review_2025-12-03.md  test_i2i_debug.py
result/: AI_Ad_Evaluation_Report.json  AI_Ad_Evaluation_Report.xlsx
scripts/: check_environment.py  depth.py  download_t5xxl.py  font.py  install_comfyui.sh  load_flux_fp8_for_lora.py  monitor.sh  monitor_backend.sh  run_experiment.py  start_all.sh  start_comfyui.sh  stop_all.sh  stop_comfyui.sh  test_flux_gcp.py  torchcheck.py  train_flux_lora_gcp.py  train_flux_lora_gcp_v6.py  train_flux_lora_v2.py
scripts/test/: prompt_self_test.py  test_flux_gcp.py  validate_model_config.py
src/: app.py  torchcheck.py
src/backend/: ai_engine.py  comfyui_client.py  comfyui_workflows.py  exceptions.py  handrefiner_wrapper.py  main.py  model_config.yaml  model_loader.py  model_registry.py  post_processor.py  schemas.py  service.py  services.py  text_Generate.py  text_overlay.py
src/backend/core/: config.py  startup.py  utils.py
src/backend/models/: schemas.py
src/backend/routers/: caption.py  i2i.py  t2i.py
src/backend/services/: image_service.py  openai_service.py  pipeline_loader.py
src/backend/templates/: caption_prompt.txt  model_params.yaml
src/evaluate/: convert_to_json.py  evaluate_text.py
src/frontend/: api_client.py  app.py  config.py  frontend_config.yaml  model_selector.py  utils.py
src/frontend/pages/: page_caption.py  page_i2i.py  page_t2i.py
src/frontend/services/: api_client.py  utils.py
src/healthcare/: backend.py  frontend.py  streamlit.py
src/outfitanyone/: config.py  localtest.py  outfitanyone_app.py  utils.py
src/rag_chatbot/: chat.py  rag_chain.py  retriever.py
src/scripts/: exp_Run.py
test/: validate_model_config.py
